-Notice backround colour and text colour change to improve visibility. -Missed logic removed from views. -Game not saving when no amount/no genre with different combinations issue fixed.

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,7 +3,9 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 #notice {
-  color: green !important;
+  color: white !important;
+  background-color: rgba(28, 202, 158, 0.267) !important;
+  border: 4pt;
 }
 
 .main-text,
